fixed the spacing problem between nav and resume

--- a/frontend/public/assets/stylesheets/resume.css
+++ b/frontend/public/assets/stylesheets/resume.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   background: url("../images/image.png");
-  background-size: 200%;
+  background-size: 100%;
   color: #333;
 
   
@@ -12,11 +12,12 @@ nav {
   text-align: left;
   position: fixed;
   width: 100%;
+  height: 70px;
   top: 0;
 
   display: flex;
 
-  
+
 }
 nav a {
   color: white;
@@ -26,7 +27,9 @@ nav a {
 /* Center all content */
   display: flex;
   justify-content: center;
-  padding: 40px 0;
+  padding: 40px ;
+
+  padding-top: 100px;
 }
 .container {
   width: 100%;
